--- a/4 CSS/css/ex4_1_4_selectors.css
+++ b/4 CSS/css/ex4_1_4_selectors.css
@@ -1,4 +1,15 @@
+/* универсальный селектор */
 * {
     padding: 0;
     margin: 0;
+  }
+
+  /* селектор элемента */
+  p {
+    color: red;
+  }
+
+  /* селектор ID */
+  #header1 {
+    color:blue
   }
