--- a/4 CSS/css/ex4_1_11_fonts_2.css
+++ b/4 CSS/css/ex4_1_11_fonts_2.css
@@ -15,9 +15,9 @@
     /* Браузер сначала попробует найти шрифт локально */
     src: local("Roboto"),
          /* Если не получилось, загрузит woff2 */
-         url("../fonts//Roboto/Roboto.woff2") format("woff2"),
+         url("../fonts/Roboto/Roboto.woff2") format("woff2"),
          /* Если браузер не поддерживает woff2, загрузит woff */
-         url("../fonts//Roboto/Roboto.woff") format("woff");
+         url("../fonts/Roboto/Roboto.woff") format("woff");
   }
 
 body {
