--- a/4 CSS/css/ex4_2_11_units.css
+++ b/4 CSS/css/ex4_2_11_units.css
@@ -28,6 +28,7 @@ div {
     background-color: #098765;
     font-size: 24px;
     width: 10em;
+    box-sizing: content-box; /* default value */
     border: 10px solid #077a6f;
     border-radius: 0.3em;
 }
