--- a/4 CSS/css/ex4_2_14_grid bckp.css
+++ b/4 CSS/css/ex4_2_14_grid bckp.css
@@ -1,76 +1,212 @@
 /* грид-контейнер, ведет себя как блок */
 .container {
-    display: grid;
+  display: grid;
 }
 /* грид-контейнер, будет вести себя как строчный элемент */
 .container {
-    display: inline-grid;
+  display: inline-grid;
 }
 
 
 /* grid-template-columns, grid-template-rows */
 .container {
-    display: grid;
-    /* Будет создано 3 колонки */
-    grid-template-columns: 40px auto 40%;
-    /* Будет создано 3 ряда */
-    grid-template-rows: 250px 5vw 15rem;
-  }
-  
+  display: grid;
+  /* Будет создано 3 колонки */
+  grid-template-columns: 40px auto 40%;
+  /* Будет создано 3 ряда */
+  grid-template-rows: 250px 5vw 15rem;
+}
+
 /* Можно явно именовать грид-линии, используя для этого квадратные скобки: */
 .container {
-  display: grid;
-  grid-template-columns: [start] 140px [line2] 250px [line3] 40px [end];
-  grid-template-rows: [row1-start] 25rem [row1-end] 10vh [last];
+display: grid;
+grid-template-columns: [start] 140px [line2] 250px [line3] 40px [end];
+grid-template-rows: [row1-start] 25rem [row1-end] 10vh [last];
 }
 
 /* Каждая линия может иметь больше одного имени. Это чем-то похоже на классы в HTML — вы можете задать элементу больше одного класса. Тут аналогичная ситуация. Например, такой код будет совершенно валиден, у второй и третьей грид-линий колонки по два имени: */
 .container {
-  display: grid;
-  grid-template-columns: [start] 140px [line2 col2-start] 250px [col2-end end];
-  grid-template-rows: [row1-start] 25rem [row1-end] 10vh [last];
+display: grid;
+grid-template-columns: [start] 140px [line2 col2-start] 250px [col2-end end];
+grid-template-rows: [row1-start] 25rem [row1-end] 10vh [last];
 }
 
 /* Если нужны одинаковые колонки или ряды, то можно воспользоваться функцией repeat().
 Будет создано 3 колонки по 250 пикселей: */
 .container {
-  display: grid;
-  grid-template-columns: repeat(3, 250px);
+display: grid;
+grid-template-columns: repeat(3, 250px);
 }
 
 /* С появлением гридов у нас появилась и новая единица измерения: fr 🦊
 fr (от fraction — доля, часть) отвечает за свободное пространство внутри грид-контейнера.
 Например, этот код создаст три колонки, каждая из которых будет занимать 1/3 ширины родителя: */
 .container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+display: grid;
+grid-template-columns: repeat(3, 1fr);
 }
 /* Что аналогично записи: */
 .container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
 }
 
 /* Свободное пространство рассчитывается после того, как место отдано всем фиксированным размерам. К примеру, в коде ниже сначала будет создана колонка шириной 200 пикселей, а затем свободное пространство — ширина родителя минус 200 пикселей — будет поделено между остальными колонками. Каждая будет занимать ширину (100% - 200px) / 2: */
 .container {
-  display: grid;
-  grid-template-columns: 1fr 200px 1fr;
+display: grid;
+grid-template-columns: 1fr 200px 1fr;
 }
 
+/* grid reset */
+/* значения по умолчанию */
+.container {
+  grid-template-columns: none;
+  grid-template-rows: none;
+}
 
 /* grid-auto-columns, grid-auto-rows */
 .container {
-    clear: both;
-    display: grid;
-    grid-template-rows: 50px 150px;
-    grid-auto-rows: 15px;
-    gap: 10px;
-  }
-  
-  .item {
-    background: lightblue;
-  }
-  
-  .item:nth-child(n + 3) {
-    background: pink;
-  }
+  display: grid;
+  grid-template-rows: 50px 150px;
+  grid-auto-rows: 15px;
+  gap: 10px;
+}
+
+.item {
+  background: lightblue;
+}
+
+.item:nth-child(n + 3) {
+  background: pink;
+}
+
+/* Можно задавать больше одного значения для автоматических колонок или рядов. Тогда паттерн размера будет повторяться до тех пор, пока не кончатся грид-элементы. */
+.container {
+  grid-template-columns: none;
+  grid-template-rows: none;
+  display: grid;
+  grid-template-columns: 50px 150px;
+  grid-auto-columns: 15px 25px 5px;
+  grid-auto-flow: column;
+  gap: 10px;
+}
+
+.item {
+  min-height: 50px;
+  background: lightblue;
+}
+
+.item:nth-child(n + 3) {
+  background: pink;
+}
+
+/* grid-auto-flow
+Если грид-элементов больше, чем явно объявленных колонок или рядов, то они автоматически размещаются внутри родителя. А вот каким образом — в ряд или в колонку — можно указать при помощи свойства grid-auto-flow. По умолчанию значение у этого свойства row, лишние элементы будут выстраиваться в ряды в рамках явно заданных колонок.
+
+Возможные значения:
+row (значение по умолчанию) — автоматически размещаемые элементы выстраиваются в ряды.
+column — автоматически размещаемые элементы выстраиваются в колонки.
+dense — браузер старается заполнить дырки (пустые ячейки) в разметке, если размеры элементов позволяют. Можно сочетать с остальными значениями.
+CLR */
+.container {
+  display: grid;
+  /* Три колонки */
+  grid-template-columns: auto auto auto;
+  /* Два ряда */
+  grid-template-rows: auto auto;
+  /* Автоматическое размещение в ряд */
+  grid-auto-flow: row; /* row dense */
+  /* Отступы между ячейками */
+  gap: 10px;
+
+  /* Для красоты */
+  padding: 10px;
+  background: #f1f1f1;
+}
+
+.item {
+  min-height: 50px;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  line-height: 1;
+  background: lightblue;
+}
+
+.item3 {
+  /* Занимает один ряд и
+  растягивается на две колонки */
+  grid-column: span 2;
+  background: pink;
+}
+
+/* CLR */
+.container {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto;
+  /* Автоматическое размещение в колонку */
+  grid-auto-flow: column dense;
+  /* Отступы между ячейками */
+  gap: 10px;
+
+  /* Для красоты */
+  padding: 10px;
+  background: #f1f1f1;
+}
+
+.item {
+  min-height: 50px;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  line-height: 1;
+  background: lightblue;
+}
+
+.item3 {
+  /* Занимает один ряд и
+  растягивается на две колонки */
+  grid-row: span 2;
+  background: pink;
+}
+
+
+/* grid-template-areas
+Позволяет задать шаблон сетки расположения элементов внутри грид-контейнера. Имена областей задаются при помощи свойства grid-area. Текущее свойство grid-template-areas просто указывает, где должны располагаться эти грид-области.
+
+Возможные значения:
+none (значение по умолчанию) — области сетки не задано имя.
+. — означает пустую ячейку.
+название — название области, может быть абсолютно любым словом или даже эмодзи! 🤯
+Обратите внимание, что нужно называть каждую из ячеек. Например, если шапка или подвал нашего сайта будут занимать все три существующие колонки, то нужно будет трижды написать названия этих областей. Удобнее всего будет подписывать области в виде некой таблицы. Подобный способ записи чем-то похож на таблицы в Markdown: */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 200px 1fr;
+  grid-template-rows: repeat(4, 150px);
+  grid-template-areas:
+    "header header header"
+    "content content 👾"
+    "content content ."
+    "footer footer footer";
+}
+
+.item1 {
+  grid-area: header;
+  background-color: purple;
+}
+
+.item2 {
+  grid-area: content;
+  background-color: gray;
+}
+
+.item3 {
+  grid-area: 👾;
+  background-color: pink;
+}
+
+.item4 {
+  grid-area: footer;
+  background-color: #bada55;
+}
