--- a/4 CSS/css/ex4_2_14_grid.css
+++ b/4 CSS/css/ex4_2_14_grid.css
@@ -1,99 +1,33 @@
-/* грид-контейнер, ведет себя как блок */
 .container {
     display: grid;
-}
-/* грид-контейнер, будет вести себя как строчный элемент */
-.container {
-    display: inline-grid;
-}
-
-
-/* grid-template-columns, grid-template-rows */
-.container {
-    display: grid;
-    /* Будет создано 3 колонки */
-    grid-template-columns: 40px auto 40%;
-    /* Будет создано 3 ряда */
-    grid-template-rows: 250px 5vw 15rem;
+    grid-template-columns: 1fr 200px 1fr;
+    grid-template-rows: repeat(4, 150px);
+    grid-template-areas:
+      "header header header"
+      "content content 👾"
+      "content content ."
+      "footer footer footer";
   }
   
-/* Можно явно именовать грид-линии, используя для этого квадратные скобки: */
-.container {
-  display: grid;
-  grid-template-columns: [start] 140px [line2] 250px [line3] 40px [end];
-  grid-template-rows: [row1-start] 25rem [row1-end] 10vh [last];
-}
-
-/* Каждая линия может иметь больше одного имени. Это чем-то похоже на классы в HTML — вы можете задать элементу больше одного класса. Тут аналогичная ситуация. Например, такой код будет совершенно валиден, у второй и третьей грид-линий колонки по два имени: */
-.container {
-  display: grid;
-  grid-template-columns: [start] 140px [line2 col2-start] 250px [col2-end end];
-  grid-template-rows: [row1-start] 25rem [row1-end] 10vh [last];
-}
-
-/* Если нужны одинаковые колонки или ряды, то можно воспользоваться функцией repeat().
-Будет создано 3 колонки по 250 пикселей: */
-.container {
-  display: grid;
-  grid-template-columns: repeat(3, 250px);
-}
-
-/* С появлением гридов у нас появилась и новая единица измерения: fr 🦊
-fr (от fraction — доля, часть) отвечает за свободное пространство внутри грид-контейнера.
-Например, этот код создаст три колонки, каждая из которых будет занимать 1/3 ширины родителя: */
-.container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-/* Что аналогично записи: */
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-/* Свободное пространство рассчитывается после того, как место отдано всем фиксированным размерам. К примеру, в коде ниже сначала будет создана колонка шириной 200 пикселей, а затем свободное пространство — ширина родителя минус 200 пикселей — будет поделено между остальными колонками. Каждая будет занимать ширину (100% - 200px) / 2: */
-.container {
-  display: grid;
-  grid-template-columns: 1fr 200px 1fr;
-}
-
-/* grid reset */
-.container {
-    grid-template-columns: none;
-}
-
-/* grid-auto-columns, grid-auto-rows */
-.container {
-    display: grid;
-    grid-template-rows: 50px 150px;
-    grid-auto-rows: 15px;
-    gap: 10px;
+  .item1 {
+    grid-area: header;
+    background-color: purple;
   }
   
-  .item {
-    background: lightblue;
+  .item2 {
+    grid-area: content;
+    background-color: gray;
   }
   
-  .item:nth-child(n + 3) {
-    background: pink;
+  .item3 {
+    grid-area: 👾;
+    background-color: pink;
+  }
+  
+  .item4 {
+    grid-area: footer;
+    background-color: #bada55;
   }
 
-/* Можно задавать больше одного значения для автоматических колонок или рядов. Тогда паттерн размера будет повторяться до тех пор, пока не кончатся грид-элементы. */
-.container {
-    grid-template-columns: none;
-    display: grid;
-    grid-template-columns: 50px 150px;
-    grid-auto-columns: 15px 25px 5px;
-    grid-auto-flow: column;
-    gap: 10px;
-}
-
-.item {
-    min-height: 50px;
-    background: lightblue;
-}
-
-.item:nth-child(n + 3) {
-    background: pink;
-}
-
+  
+  
