--- a/4 CSS/css/ex4_2_14_grid bckp.css
+++ b/4 CSS/css/ex4_2_14_grid bckp.css
@@ -179,7 +179,8 @@ CLR */
 none (значение по умолчанию) — области сетки не задано имя.
 . — означает пустую ячейку.
 название — название области, может быть абсолютно любым словом или даже эмодзи! 🤯
-Обратите внимание, что нужно называть каждую из ячеек. Например, если шапка или подвал нашего сайта будут занимать все три существующие колонки, то нужно будет трижды написать названия этих областей. Удобнее всего будет подписывать области в виде некой таблицы. Подобный способ записи чем-то похож на таблицы в Markdown: */
+Обратите внимание, что нужно называть каждую из ячеек. Например, если шапка или подвал нашего сайта будут занимать все три существующие колонки, то нужно будет трижды написать названия этих областей. Удобнее всего будет подписывать области в виде некой таблицы. Подобный способ записи чем-то похож на таблицы в Markdown: 
+CLR*/
 .container {
   display: grid;
   grid-template-columns: 1fr 200px 1fr;
@@ -209,4 +210,58 @@ none (значение по умолчанию) — области сетки н
 .item4 {
   grid-area: footer;
   background-color: #bada55;
+}
+
+
+/* grid-template
+Свойство-шорткат для свойств grid-template-rows, grid-template-columns. Позволяет записать все значения в одну строку. Главное после этого не запутаться при чтении 😅
+Можно прописать все колонки и ряды сразу, разделяя их слэшем /. Сперва идут ряды, а затем колонки, не перепутайте! */
+.container {
+  display: grid;
+  grid-template: repeat(4, 150px) / 1fr 200px 1fr;
+  gap: 10px;
+}
+
+.item {
+  min-height: 50px;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  line-height: 1;
+  background: lightblue;
+}
+
+
+/* В этом же свойстве можно задавать значение и для свойства grid-template-areas, но тогда код превращается в кашу и становится совершенно нечитабельным, на мой взгляд. Лучше всё же использовать это свойство отдельно: */
+.container {
+  display: grid;
+  grid-template:
+  [row1-start] "header header header" 25px [row1-end]
+  [row2-start] "footer footer footer" 25px [row2-end]
+  / auto 50px auto;
+  gap: 10px;
+}
+
+/* Эквивалентная запись */
+.container {
+  display: grid;
+  grid-template:
+      [row1-start] 25px [row1-end]
+      [row2-start] 25px [row2-end]
+      / auto 50px auto;
+  grid-template-areas:
+      "header header header"
+      "footer footer footer";
+  gap: 10px;
+}
+
+
+.item1 {
+  grid-area: header;
+  background-color: purple;
+}
+
+.item2 {
+  grid-area: footer;
+  background-color: brown;
 }
