--- a/Проекты/Задания 5/css/style_5_1.css
+++ b/Проекты/Задания 5/css/style_5_1.css
@@ -6,29 +6,48 @@
 body{
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
-    background-color: lightslategray;
+    letter-spacing: -0.015em;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 20px;
     color: #000000;
+    /* background-color: lightslategray; */
+}
+
+.header{
+    /* width: 100%; */
+    height: 100px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    background-color: #FFFFFF;
+    /* border: 5px solid black;
+    border-radius: 5px; */
+}
+
+.green {
+    color: #05a88d;
 }
 
 .menu {
-    height: 100px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* border: 3px solid green;
+    border-radius: 3px; */
 }
 
 .menu__ul {
     list-style: none;
-    height: 100%;
     display: flex; 
-    align-items: center;
-    justify-content: space-around;
-    width: auto;
+    /* border: 2px solid darkblue;
+    border-radius: 2px; */
 }
 
-/* .menu__li {
-    margin: 40px;
-} */
+.menu__li {
+    margin-left: 40px;
+}
 
 a {
     text-decoration: none;
@@ -39,12 +58,31 @@ a {
     color: #05a88d;
 }
 
-.header{
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #FFFFFF;
+.logo {
+    margin-left: 40px;
+    margin-right: 70px;
+    /* border: 2px solid darkblue;
+    border-radius: 2px; */
 }
 
-.green {
-    color: #05a88d;
+.menu__logo {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.login {
+    display: flex;
+    align-items: center;
+    /* border: 2px solid darkblue;
+    border-radius: 2px; */
+}
+.menu__signup, .menu__login {
+    margin-right: 70px;
+}
+.menu__signup {
+    padding: 12.5px;
+    border: 1px solid #05a88d;
+    border-radius: 5px;
 }
