--- a/Проекты/Задания 5/css/style_5_2.css
+++ b/Проекты/Задания 5/css/style_5_2.css
@@ -9,19 +9,19 @@ body{
 .container{
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     width: 100%;
     height: 100vh;
+    /* padding: 20px; */
     background-color: #15638F;
 }
 
 .card {
     width: 200px;
-    height: auto;
-    margin: 68px auto;
     background-color: #FFFFFF;
     border-radius: 10px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
 }
 
 .card__image {
@@ -63,6 +63,7 @@ body{
     border-radius: 50px;
     box-sizing: border-box;
     border: none;
+    cursor: pointer;
 }
 
 .card__btn:hover {
